[package]
name = "gkz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = "0.3.59"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4"
chrono = "0.4.22"
yew-router = "0.16.0"
